Исправляет ошибки валидации

--- a/catalog.html
+++ b/catalog.html
@@ -158,7 +158,7 @@
               <div class="filter-button-container">
                 <button class="filter-button" type="submit">Применить</button>
                 <button class="filter-button" type="reset">Сбросить</button>
-                <div>
+              </div>
             </form>
           </section>
         </div>
@@ -296,6 +296,7 @@
         </section>
         <div class="contacts-container" data-test="footer">
           <section class="socials">
+            <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="social-list">
               <li class="social-item">
                 <a class="social-link" href="https://vk.com/htmlacademy">
@@ -330,9 +331,11 @@
             </ul>
           </section>
           <section class="contacts">
+            <h2 class="visually-hidden">Телефоны</h2>
             <a class="contacts-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </section>
           <section class="copyright">
+            <h2 class="visually-hidden">Копирайт</h2>
             <a class="copyright-link" href="https://htmlacademy.ru/">
               <svg class="htmlacademy-logo" role="img" aria-label="Логотип компании-разработчика HTML-Academy"
                 aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="115" height="34"
