--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="./images/favicon.ico">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   </head>
 
   <body>
@@ -34,7 +35,7 @@
                   <path
                     d="M19.5 18.0083L15.8 14.3287C16.8 13.0359 17.5 11.3453 17.5 9.4558C17.5 5.08011 13.9 1.5 9.5 1.5C5.1 1.5 1.5 5.17956 1.5 9.55525C1.5 13.9309 5.1 17.511 9.5 17.511C11.3 17.511 13 16.9144 14.4 15.8204L18.1 19.5L19.5 18.0083ZM9.5 15.5221C6.2 15.5221 3.5 12.837 3.5 9.55525C3.5 6.27348 6.2 3.5884 9.5 3.5884C12.8 3.5884 15.5 6.27348 15.5 9.55525C15.5 12.837 12.8 15.5221 9.5 15.5221Z" />
                 </svg>
-                <span class="visually-hidden">Поиск по сайту</span>
+                <span class="visually-hidden">Поиск по сайту.</span>
               </a>
             </li>
             <li class="user-menu-item user-menu-favorite">
@@ -44,7 +45,7 @@
                   <path
                     d="M9.9 19C9.6 19 9.3 18.9 9.1 18.6C3.7 12.5 2.4 11.1 2.1 10.7C1.4 9.8 1 8.6 1 7.4C1 4.4 3.4 2 6.5 2C7.8 2 9 2.5 10 3.3C11 2.5 12.3 2 13.5 2C16.5 2 19 4.4 19 7.4C19 8.7 18.5 9.9 17.7 10.8L10.7 18.7C10.5 18.9 10.3 19 9.9 19ZM3.9 9.5C4.2 9.9 7.4 13.5 10 16.4L16.2 9.4C16.7 8.9 16.9 8.2 16.9 7.4C16.9 5.6 15.4 4.1 13.6 4.1C12.6 4.1 11.6 4.6 10.9 5.4C10.6 5.7 10.3 5.8 10 5.8C9.7 5.8 9.4 5.6 9.2 5.4C8.5 4.6 7.5 4.1 6.5 4.1C4.7 4.1 3.2 5.6 3.2 7.4C3.1 8.3 3.5 9 3.9 9.5C3.8 9.5 3.8 9.5 3.9 9.5Z" />
                 </svg>
-                <span class="visually-hidden">Понравилось</span>
+                <span class="visually-hidden">Понравилось.</span>
                 <span class="notification-badge">12</span>
               </a>
             </li>
@@ -55,9 +56,9 @@
         </nav>
       </header>
       <main class="main-container main-index" data-test="main">
-        <h1 class="visually-hidden">Сайт города Седона</h1>
+        <h1 class="visually-hidden">Сайт города Седона.</h1>
         <section class="hero" data-test="hero">
-          <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
+          <h2 class="visually-hidden">Добро пожаловать в Седону.</h2>
           <img class="hero-image" width="458" height="352" src="./images/welcome-image.svg"
             alt="Добро пожаловать в Седону">
         </section>
@@ -94,7 +95,7 @@
             </li>
           </ul>
         </section>
-        <section class="services">
+        <section class="services" data-test="service">
           <h2 class="services-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
           <p class="services-subtitle">Опытный персонал и качественное обслуживание!</p>
           <ul class="services-list">
@@ -133,7 +134,7 @@
         </section>
         <div class="contacts-container" data-test="footer">
           <section class="socials">
-            <h2 class="visually-hidden">Социальные сети</h2>
+            <h2 class="visually-hidden">Социальные сети.</h2>
             <ul class="social-list">
               <li class="social-item">
                 <a class="social-link" href="https://vk.com/htmlacademy">
@@ -142,7 +143,7 @@
                     <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M24.116 1.804c.166-.546 0-.948-.795-.948h-2.625c-.668 0-.976.347-1.143.73 0 0-1.335 3.196-3.226 5.272-.612.602-.89.793-1.224.793-.167 0-.418-.19-.418-.738V1.804c0-.656-.184-.948-.74-.948H9.817c-.417 0-.668.304-.668.593 0 .621.946.765 1.043 2.513V7.76c0 .833-.153.984-.487.984-.89 0-3.055-3.21-4.34-6.885-.249-.715-.5-1.003-1.172-1.003H1.566c-.75 0-.9.347-.9.73 0 .682.89 4.07 4.145 8.551 2.17 3.06 5.225 4.72 8.008 4.72 1.67 0 1.875-.369 1.875-1.004V11.54c0-.737.158-.884.687-.884.39 0 1.057.192 2.615 1.667 1.78 1.75 2.073 2.533 3.075 2.533h2.625c.75 0 1.126-.368.91-1.096-.238-.724-1.088-1.775-2.215-3.022-.612-.71-1.53-1.475-1.809-1.858-.389-.49-.278-.71 0-1.147 0 0 3.2-4.426 3.533-5.929h.001Z" />
                   </svg>
-                  <span class="visually-hidden">Мы во Вконтакте</span>
+                  <span class="visually-hidden">Мы во Вконтакте.</span>
                 </a>
               </li>
               <li class="social-item">
@@ -152,7 +153,7 @@
                     <path
                       d="M16.785.956.84 7.104C-.248 7.541-.24 8.148.64 8.42l4.094 1.277 9.472-5.976c.448-.272.857-.126.52.173l-7.673 6.925H7.05l.002.001-.283 4.22c.414 0 .597-.19.829-.414l1.988-1.934 4.136 3.055c.762.42 1.31.205 1.5-.706l2.715-12.795c.278-1.114-.425-1.618-1.153-1.29Z" />
                   </svg>
-                  <span class="visually-hidden">Мы в Телеграме</span>
+                  <span class="visually-hidden">Мы в Телеграме.</span>
                 </a>
               </li>
               <li class="social-item">
@@ -162,17 +163,17 @@
                     <path
                       d="M18.94.356H3.507C1.647.356.333 1.95.333 3.756V13.85c0 1.913 1.314 3.506 3.174 3.506H19.16c1.642 0 3.174-1.593 3.174-3.4v-10.2c-.219-1.806-1.532-3.4-3.393-3.4ZM7.995 12.894V4.819l7.333 4.037-7.333 4.038Z" />
                   </svg>
-                  <span class="visually-hidden">Мы в Youtube</span>
+                  <span class="visually-hidden">Мы в Youtube.</span>
                 </a>
               </li>
             </ul>
           </section>
           <section class="contacts">
-            <h2 class="visually-hidden">Телефоны</h2>
+            <h2 class="visually-hidden">Телефоны.</h2>
             <a class="contacts-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </section>
           <section class="copyright">
-            <h2 class="visually-hidden">Копирайт</h2>
+            <h2 class="visually-hidden">Копирайт.</h2>
             <a class="copyright-link" href="https://htmlacademy.ru/">
               <svg class="htmlacademy-logo" role="img" aria-label="Логотип разработчика HTML-Academy" aria-hidden="true"
                 focusable="false" xmlns="http://www.w3.org/2000/svg" width="115" height="34" viewBox="0 0 115 34">
@@ -187,7 +188,7 @@
       <div class="modal-container modal-container-none">
         <div class="modal modal-search-hotel">
           <button class="modal-close-button">
-            <span class="visually-hidden">Закрыть</span>
+            <span class="visually-hidden">Закрыть.</span>
             <svg class="close-button-icon" width="14" height="14" viewBox="0 0 14 14"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -199,16 +200,22 @@
             <form action="https://echo.htmlacademy.ru/" method="post" class="serch-hotel-form">
               <div class="modal-field-container">
                 <label class="modal-label" for="check-in">Дата Заезда:</label>
-                <input class="search-form-input" type="text" id="check-in" name="check in" placeholder="Укажите дату"
-                  value="27 апреля 2020" required>
+                <div class="modal-input-container">
+                  <input class="search-form-input" type="text" id="check-in" name="check in" placeholder="Укажите дату"
+                    value="27 апреля 2020" required>
+                  <span class="modal-message modal-message-error">Мы не можем отправить вас в прошлое.</span>
+                </div>
               </div>
-              <span class="modal-message modal-message-error"></span>
+
               <div class="modal-field-container">
                 <label class="modal-label" for="check-out">Дата Выезда:</label>
-                <input class="search-form-input" type="text" id="check-out" name="check out" placeholder="Укажите дату"
-                  value="1 сентября 2023" required>
+                <div class="modal-input-container">
+                  <input class="search-form-input" type="text" id="check-out" name="check out"
+                    placeholder="Укажите дату" value="1 сентября 2023" required>
+                  <span class="modal-message">На эти даты есть свободные номера. Пока есть.</span>
+                </div>
               </div>
-              <span class="modal-message modal-message-info"></span>
+
               <div class="modal-field-container">
                 <label class="modal-label" for="adult-amount">Взрослые:</label>
                 <div class="count-button-container">
