Добавляет правки после первой проверки

--- a/catalog.html
+++ b/catalog.html
@@ -201,7 +201,7 @@
               <p class="hotel-type">Гостиница</p>
               <p class="hotel-price">От <span class="hotel-price-amount">4000</span> ₽</p>
               <a class="button card-button" href="#">подробнее</a>
-              <button class="button favorite-button" type="submit">в избранное</button>
+              <button class="button favorite-button" type="button">в избранное</button>
               <p class="hotel-rating four-stars">
                 <span class="visually-hidden">Отель 4 звезды.</span>
               </p>
@@ -218,7 +218,7 @@
               <p class="hotel-type">Гостиница</p>
               <p class="hotel-price">От <span class="hotel-price-amount">5000</span> ₽</p>
               <a class="button card-button" href="#">подробнее</a>
-              <button class="button favorite-button-selected" type="submit">в избранном</button>
+              <button class="button favorite-button-selected" type="button">в избранном</button>
               <p class="hotel-rating four-stars">
                 <span class="visually-hidden">Отель 4 звезды.</span>
               </p>
@@ -235,7 +235,7 @@
               <p class="hotel-type">Гостиница</p>
               <p class="hotel-price">От <span class="hotel-price-amount">2500</span> ₽</p>
               <a class="button card-button" href="#">подробнее</a>
-              <button class="button favorite-button" type="submit">в избранное</button>
+              <button class="button favorite-button" type="button">в избранное</button>
               <p class="hotel-rating three-stars">
                 <span class="visually-hidden">Отель 3 звезды.</span>
               </p>
@@ -252,7 +252,7 @@
               <p class="hotel-type">Гостиница</p>
               <p class="hotel-price">От <span class="hotel-price-amount">1500</span> ₽</p>
               <a class="button card-button" href="#">подробнее</a>
-              <button class="button favorite-button" type="submit">в избранное</button>
+              <button class="button favorite-button" type="button">в избранное</button>
               <p class="hotel-rating two-stars">
                 <span class="visually-hidden">Отель 2 звезды.</span>
               </p>
