--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                   </button>
                 </div>
               </div>
-              <button class="modal-button">Найти</button>
+              <button class="modal-button" class="button">Найти</button>
             </form>
           </section>
         </div>
