Добавляет исправления после проверки наставником

--- a/catalog.html
+++ b/catalog.html
@@ -81,26 +81,17 @@
                 <legend class="hotel-filter-title">Инфраструктура:</legend>
                 <ul class="hotel-filter-list">
                   <li class="hotel-filter-item">
-                    <label class="control" for="swimming-pool">
-                      <input class="control-input visually-hidden" id="swimming-pool" name="swimming-pool"
-                        type="checkbox" checked>
-                      <span class="control-mark"></span>
-                      Бассейн
-                    </label>
+                    <input class="control-input visually-hidden" id="swimming-pool" name="swimming-pool" type="checkbox"
+                      checked>
+                    <label class="control" for="swimming-pool">Бассейн</label>
                   </li>
                   <li class="hotel-filter-item">
-                    <label class="control" for="parking">
-                      <input class="control-input visually-hidden" id="parking" name="parking" type="checkbox" checked>
-                      <span class="control-mark"></span>
-                      Парковка
-                    </label>
+                    <input class="control-input visually-hidden" id="parking" name="parking" type="checkbox" checked>
+                    <label class="control" for="parking">Парковка</label>
                   </li>
                   <li class="hotel-filter-item">
-                    <label class="control" for="wi-fi">
-                      <input class="control-input visually-hidden" id="wi-fi" name="wi-fi" type="checkbox">
-                      <span class="control-mark"></span>
-                      Wi-Fi
-                    </label>
+                    <input class="control-input visually-hidden" id="wi-fi" name="wi-fi" type="checkbox">
+                    <label class="control" for="wi-fi">Wi-Fi</label>
                   </li>
                 </ul>
               </fieldset>
@@ -108,28 +99,19 @@
                 <legend class="hotel-filter-title">Тип Жилья:</legend>
                 <ul class="hotel-filter-list">
                   <li class="hotel-filter-item">
-                    <label class="control" for="hotel">
-                      <input class="control-input visually-hidden" id="hotel" name="hotel-type" value="hotel"
-                        type="radio" checked>
-                      <span class="control-mark"></span>
-                      Гостиница
-                    </label>
+                    <input class="control-input visually-hidden" id="hotel" name="hotel-type" value="hotel" type="radio"
+                      checked>
+                    <label class="control" for="hotel">Гостиница</label>
                   </li>
                   <li class="hotel-filter-item">
-                    <label class="control" for="motel">
-                      <input class="control-input visually-hidden" id="motel" name="hotel-type" value="motel"
-                        type="radio">
-                      <span class="control-mark"></span>
-                      Мотель
-                    </label>
+                    <input class="control-input visually-hidden" id="motel" name="hotel-type" value="motel"
+                      type="radio">
+                    <label class="control" for="motel">Мотель</label>
                   </li>
                   <li class="hotel-filter-item">
-                    <label class="control" for="apartments">
-                      <input class="control-input visually-hidden" id="apartments" name="hotel-type" value="apartments"
-                        type="radio">
-                      <span class="control-mark"></span>
-                      Апартаменты
-                    </label>
+                    <input class="control-input visually-hidden" id="apartments" name="hotel-type" value="apartments"
+                      type="radio">
+                    <label class="control" for="apartments">Апартаменты</label>
                   </li>
                 </ul>
               </fieldset>
