--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       </footer>
       <div class="modal-container modal-container-none">
         <div class="modal modal-search-hotel">
-          <button class="modal-close-button">
+          <button class="modal-close-button"  type="button">
             <span class="visually-hidden">Закрыть.</span>
             <svg class="close-button-icon" width="14" height="14" viewBox="0 0 14 14"
               xmlns="http://www.w3.org/2000/svg">
@@ -263,7 +263,7 @@
                   </button>
                 </div>
               </div>
-              <button class="modal-button" class="button">Найти</button>
+              <button class="button modal-button" type="button">Найти</button>
             </form>
           </section>
         </div>
