--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                   </button>
                 </div>
               </div>
-              <button class="modal-button button" type="button">Найти</button>
+              <button class="modal-button button" type="submit">Найти</button>
             </form>
           </section>
         </div>
